refactor: use Stream.toList() for immutable results in common services